[package]
name = "firestore"
version = "0.23.1-alpha.0"
authors = ["Abdulla Abdurakhmanov <me@abdolence.dev>"]
edition = "2021"
rust-version = "1.63"
license = "Apache-2.0"
description = "Library provides a simple API for Google Firestore and own Serde serializer based on efficient gRPC API"
homepage = "https://github.com/abdolence/firestore-rs"
repository = "https://github.com/abdolence/firestore-rs"
documentation = "https://docs.rs/firestore"
keywords = ["firestore", "google", "client"]
categories = ["api-bindings"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "firestore"
path = "src/lib.rs"

[features]

[dependencies]
tracing = "0.1"
gcloud-sdk = { version = "0.19.13", features = ["google-firestore-v1"] }
tonic = { version = "0.8", features = ["tls"] }
hyper = { version ="0.14" }
struct-path = "0.2"
rvstruct = "0.3.2"
rsb_derive = "0.5"
serde = { version = "1.0", features = ["derive"] }
prost-types = "0.11"
tokio = { version = "1.24", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
hex = "0.4"
backoff = { version = "0.4.0", features = ["tokio"] }

[dev-dependencies]
cargo-husky = { version = "1.5", default-features = false, features = ["run-for-all", "prepush-hook", "run-cargo-fmt"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
