[package]
name = "firestore"
version = "0.35.2-alpha.0"
authors = ["Abdulla Abdurakhmanov <me@abdolence.dev>"]
edition = "2021"
rust-version = "1.63"
license = "Apache-2.0"
description = "Library provides a simple API for Google Firestore and own Serde serializer based on efficient gRPC API"
homepage = "https://github.com/abdolence/firestore-rs"
repository = "https://github.com/abdolence/firestore-rs"
documentation = "https://docs.rs/firestore"
keywords = ["firestore", "google", "client"]
categories = ["api-bindings"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "firestore"
path = "src/lib.rs"

[features]
default = []
caching = []
caching-memory = ["caching", "dep:moka"]
caching-persistent = ["caching", "dep:redb", "dep:prost"]

[dependencies]
tracing = "0.1"
gcloud-sdk = { version = "0.20.6", features = ["google-firestore-v1"] }
tonic = { version = "0.9", features = ["tls"] }
hyper = { version ="0.14" }
struct-path = "0.2"
rvstruct = "0.3.2"
rsb_derive = "0.5"
serde = { version = "1.0", features = ["derive"] }
prost-types = "0.12"
prost = { version = "0.11", optional = true }
tokio = { version = "1" }
tokio-stream = "0.1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde", "clock"], default-features = false }
async-trait = "0.1"
hex = "0.4"
backoff = { version = "0.4", features = ["tokio"] }
redb = { version = "1.1", optional = true }
moka = { version = "0.11", features = ["future"], optional = true } # Caching library

[dev-dependencies]
cargo-husky = { version = "1.5", default-features = false, features = ["run-for-all", "prepush-hook", "run-cargo-fmt"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
tempfile = "3"
approx = "0.5"

[[example]]
name = "caching_memory_collections"
path = "examples/caching_memory_collections.rs"
required-features = ["caching-memory"]

[[example]]
name = "caching_persistent_collections"
path = "examples/caching_persistent_collections.rs"
required-features = ["caching-persistent"]

[[test]]
name = "caching_memory_test"
path = "tests/caching_memory_test.rs"
required-features = ["caching-memory"]

[[test]]
name = "caching_persistent_test"
path = "tests/caching_persistent_test.rs"
required-features = ["caching-persistent"]

